# az-viz

./: .gitignore  Cargo.toml  README.md  package-lock.json
docs/: az command test script.txt  graph UI.pptx
docs/superpowers/plans/: 2026-04-19-az-plotter-implementation.md  2026-04-19-graph-node-visual-plan.md  2026-04-19-icon-implementation.md  2026-04-19-node-context-menu-plan.md  2026-04-20-github-readme-infographics.md
docs/superpowers/specs/: 2026-04-18-az-plotter-design.md  2026-04-19-graph-node-visual-design.md  2026-04-19-icon-design.md  2026-04-19-installer-upgrade-design.md  2026-04-19-node-context-menu-design.md  2026-04-19-remove-command-design.md  (+2 more)
scripts/: bump-version.js  create-ico.py  rasterize-icon.js  validate-readme-assets.js
scripts/hooks/: pre-commit
src-fake-az/: Cargo.toml
src-fake-az/src/: main.rs
src-tauri/: Cargo.toml  arg-map.json  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ipc/: commands.rs  mod.rs  state.rs
src-tauri/src/model/: command.rs  edge.rs  graph.rs  group.rs  ids.rs  mod.rs  node.rs  scope.rs  variable.rs
src-tauri/src/parser/: argmap.rs  commit.rs  mod.rs  parse.rs  tokenize.rs  varsyntax.rs
src-tauri/src/persist/: mod.rs  project.rs
src-tauri/src/planner/: mod.rs  topo.rs
src-tauri/src/runner/: az.rs  dispatch.rs  emit.rs  live.rs  materialize.rs  mod.rs
src-tauri/src/verify/: mod.rs  worker.rs
src-tauri/tests/: argmap_bundle.rs  context_menu.rs  e2e_smoke.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte
(+27 files in other folders)
