[workspace]
resolver = "2"
members = ["src-tauri", "src-fake-az"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
shell-words = "1"
